# LangGraph_practicas

./: .gitignore  README.md  langgraph.json  main.py  notebook.ipynb  pyproject.toml
notebooks/: 02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  08-prompting.ipynb  09-tools.ipynb  10-routing_conditions.ipynb  11-parallelization.ipynb  12_random_orchestrator.ipynb  notebook.ipynb
src/agents/: eval_optim.py  orchestrator.py  rag.py  rag_seq.py  react.py  simple.py
src/agents/code_reviewer/: agent.py  state.py
src/agents/code_reviewer/nodes/aggregator/: node.py  prompt.py
src/agents/code_reviewer/nodes/maintainability_review/: node.py  prompt.py
src/agents/code_reviewer/nodes/performance_review/: node.py  prompt.py
src/agents/code_reviewer/nodes/security_review/: node.py  prompt.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/routes/intent/: prompt.py  route.py
src/api/: db.py  main.py
