[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.12",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
]

[tool.setupstools.packages.find]
where = ["src"]
include = ["*"]
