[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.5.23",
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-cli[inmem]>=0.4.12",
    "onnxruntime==1.19.2",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
